@startuml DiagramaOriginal

skinparam classAttributeIconSize 0

class Empleado {
  -idEmpleado: INT
  -nombre: VARCHAR
  -direccion: VARCHAR
  -telefono: VARCHAR
  -celular: VARCHAR
  -email: VARCHAR
  +actualizarDatos()
}

class Usuario {
  -idUsuario: INT
  -nombre: VARCHAR
  -contraseña: VARCHAR
  -email: VARCHAR
  -estado: ENUM
  +autenticar()
  +registrar()
  +actualizarPerfil()
}

class Rol {
  -idRol: INT
  -nombre: VARCHAR
  -descripcion: VARCHAR
  +asignarPermisos()
  +actualizarDescripcion()
}

class Notificacion {
  -idNotificacion: INT
  -tipo: VARCHAR
  -fecha: DATETIME
  -estado: ENUM
  -idUsuario: INT
  -idProducto: INT
  +enviar()
  +marcarLeida()
}

class Bodega {
  -idBodega: INT
  -nombre: VARCHAR
  -direccion: VARCHAR
  +listarProductos()
}

class Categoria {
  -idCategoria: INT
  -nombre: VARCHAR
  -descripcion: VARCHAR
  +crearCategoria()
  +actualizarCategoria()
}

class Producto {
  -idProducto: INT
  -nombre: VARCHAR
  -descripcion: VARCHAR
  -precio: DECIMAL
  -stock: INT
  +actualizarStock()
  +actualizarDatos()
}

class Proveedor {
  -idProveedor: INT
  -nombre: VARCHAR
  -direccion: VARCHAR
  -telefono: VARCHAR
  -email: VARCHAR
  +registrarPedidoCompra()
  +actualizarDatos()
}

class Cliente {
  -idCliente: INT
  -nombre: VARCHAR
  -direccion: VARCHAR
  -telefono: VARCHAR
  -email: VARCHAR
  +realizarPedido()
  +consultarEstadoPedido()
  +actualizarDatos()
}

class Movimientos {
  -idMovimiento: INT
  -tipo: ENUM
  -fecha: DATE
  -cantidad: INT
  +registrarEntrada()
  +registrarSalida()
}

class DetalleMovimientos {
  -idDetalle: INT
  -idMovimiento: INT
  -idProducto: INT
  -cantidad: INT
  -valorUnit: DECIMAL
  -valorTotal: DECIMAL
  +calcularSubtotal()
}

class Existencia {
  -idExistencia: INT
  -idProducto: INT
  -idBodega: INT
  -cantidad: INT
  -valor: DECIMAL
  +actualizarCantidad()
  +consultarDisponibilidad()
}

class Prediccion {
  -idPrediccion: INT
  -idProducto: INT
  -fechaMovimiento: DATE
  -stock: INT
  -confianza: DECIMAL
  -ultimaActualizacion: DATE
  +generarPrediccion()
  +actualizarPrediccion()
}

class Pedido_Compra {
  -idPedido: INT
  -numero: VARCHAR
  -idProveedor: INT
  -fechaCreacion: DATE
  -fechaEntrega: DATE
  -total: DECIMAL
  -estado: ENUM
  +registrarEstadoProductos()
  +actualizarEstadoPedido()
}

class Pedido_Venta {
  -idVenta: INT
  -numero: VARCHAR
  -idCliente: INT
  -idUsuario: INT
  -fechaCreacion: DATE
  -fechaEntrega: DATE
  -total: DECIMAL
  -estado: ENUM
  +generarFactura()
  +actualizarEstadoVenta()
  +registrarPago()
}

class PedidoDetalle_Compra {
  -idDetalle: INT
  -idPedido: INT
  -idProducto: INT
  -cantidad: INT
  -precioUnitario: DECIMAL
  +guardar()
}

class PedidoDetalle_Venta {
  -idDetalle: INT
  -idVenta: INT
  -idProducto: INT
  -cantidad: INT
  -precioUnitario: DECIMAL
  +guardar()
}

' -------------------------
' Relaciones
' -------------------------

Empleado "1" -- "1" Usuario
Usuario "1" -- "1" Rol
Usuario "1" -- "*" Notificacion
Producto "1" -- "*" Notificacion
Producto "1" -- "*" Existencia
Producto "1" -- "*" DetalleMovimientos
Producto "1" -- "*" Prediccion
Bodega "1" -- "*" Existencia
Existencia "1" -- "*" DetalleMovimientos
Movimientos "1" -- "*" DetalleMovimientos
Proveedor "1" -- "*" Pedido_Compra
Cliente "1" -- "*" Pedido_Venta
Pedido_Compra "1" -- "*" PedidoDetalle_Compra
Pedido_Venta "1" -- "*" PedidoDetalle_Venta
Producto "1" -- "*" PedidoDetalle_Compra
Producto "1" -- "*" PedidoDetalle_Venta
Categoria "1" -- "*" Producto

@enduml
